<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/loading_page" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/input_edit_text"
        android:text="@string/register_greeting"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/register_username_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/input_edit_text"
        android:hint="@string/register_username_field"
        android:inputType="text"/>

    <EditText
        android:id="@+id/register_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/input_edit_text"
        android:hint="@string/register_password_field"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_conf_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/input_edit_text"
        android:hint="@string/register_confirm_password_field"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_button" />

</LinearLayout>