<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chat_sender_username"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chat_sender_message"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textSize="14sp"/>
    <TextView
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chat_sender_time"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:textSize="12sp"/>
</LinearLayout>