<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:background="@color/gameListBackground" android:padding="8dp">

    <TextView
            android:id="@+id/create_instructions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claim_route_instructions"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textColor="@color/white"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            tools:listitem="@layout/list_item_select_route_view"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/create_instructions_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/view_cards_recycler_view"/>
    <Button
            android:text="@string/use_these_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view_cards_close_button"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/view_cards_recycler_view"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cancel_button"
            android:text="@string/cancel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/view_cards_close_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/view_cards_recycler_view"/>
</android.support.constraint.ConstraintLayout>