<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@mipmap/chat_page">
    <android.support.v7.widget.RecyclerView
            android:layout_width="301dp"
            android:layout_height="0dp"
            android:id="@+id/chat_recycler_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/chatListBackground"
            tools:listitem="@layout/list_item_lobby_chat"
    />
    <android.support.constraint.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout4"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/divider_chat"
    >
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/chat_edit_text" android:layout_weight="1" android:hint="@string/newMessage"
                android:padding="4dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <Button
                android:layout_width="65dp"
                android:layout_height="0dp" android:id="@+id/message_send_button" android:layout_weight="0.5"
                android:background="@drawable/message_send_button" android:text="@string/send"
                android:textColor="@color/white" android:textSize="12sp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/chat_edit_text"
                android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <View
            android:id="@+id/divider_chat"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/chat_recycler_view"
    />
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/current_player_recycler_view"
            app:layout_constraintEnd_toStartOf="@+id/divider_chat"
            app:layout_constraintStart_toEndOf="@+id/divider_player"
            android:background="@color/gameListBackground"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/list_item_connected_player" />
    <View
            android:id="@+id/divider_player"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="250dp"
            android:layout_marginStart="250dp"/>
    <TextView
            android:text="@string/connectedPlayers"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/current_player_recycler_view"
            app:layout_constraintStart_toEndOf="@+id/divider_player"
            android:gravity="center" android:background="@color/gameListHeadersBackground" android:textSize="18sp"/>
    <Button
            android:text="@string/startGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/admin_start_game_button" app:layout_constraintEnd_toStartOf="@+id/divider_player"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/authentication_button"
            android:paddingEnd="12dp" android:paddingStart="12dp"/>

</android.support.constraint.ConstraintLayout>