<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity"
        android:background="@mipmap/loading_page">


    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:background="@color/gameListBackground"
            app:layout_constraintStart_toEndOf="@id/game_list_guideline"
            app:layout_constraintHorizontal_bias="1.0">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/gameListHeadersBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/linearLayout">
            <TextView
                    android:text="#"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="#B0B0B0"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"/>
            <TextView
                    android:background="#4C4C4C"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"/>
            <TextView
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="start"
                    android:textColor="#B0B0B0"
                    android:layout_margin="2dp"
                    android:paddingTop="2dp"
                    android:paddingLeft="4dp"/>
            <TextView
                    android:background="#4C4C4C"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"/>
            <TextView
                    android:text="@string/host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:textColor="#B0B0B0"
                    android:layout_margin="2dp"
                    android:paddingTop="2dp"
                    android:paddingLeft="4dp"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintBottom_toTopOf="@id/game_buttons"
                android:id="@+id/game_list_recycler_view"
                tools:listitem="@layout/list_item_game"
                tools:itemCount="10" app:layout_constraintVertical_chainStyle="packed">
        </android.support.v7.widget.RecyclerView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@+id/game_list_recycler_view"
                app:layout_constraintBottom_toTopOf="@id/game_buttons"
                android:background="@color/white"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/game_buttons"
                app:layout_constraintTop_toBottomOf="@+id/game_list_recycler_view"
                app:layout_constraintBottom_toBottomOf="parent">
            <Button
                    android:text="@string/create_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_game_button"
                    android:layout_weight="1"/>
            <Button
                    android:text="@string/join_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/join_game_button"
                    android:layout_weight="1"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/game_list_guideline" app:layout_constraintGuide_begin="342dp"
                                          android:orientation="vertical"/>
</android.support.constraint.ConstraintLayout>